k8s/quarkus-app-deployment-bundle.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name:  quarkus-msvcs
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: developer-crud-app
    name: developer-crud-app
    namespace: quarkus-msvcs
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: developer-crud-app
    template:
      metadata:
        labels:
          app: developer-crud-app
      spec:
        containers:
        - image: quay.io/famargon/developer-crud-app
          imagePullPolicy: Always
          name: developer-crud-app
          livenessProbe:
            httpGet:
              path: /health
              port: 9999
            initialDelaySeconds: 1
            periodSeconds: 5
          terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: developer-crud-app
    name: developer-crud-app
    namespace: quarkus-msvcs
  spec:
    ports:    
    - port: 9999
      protocol: TCP
      targetPort: 9999
      name: http
    selector:
      app: developer-crud-app
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: developer-crud-app
    name: developer-crud-app
    namespace: quarkus-msvcs
  spec:
    to:
      kind: Service
      name: developer-crud-app
      weight: 100
